# WASP-50b

./: .gitignore  CondaPkg.toml  LICENSE  Project.toml  README.md  env_linux.yml  environment.yml  gen_html.jl  index.html  index.jl  index.jl.html  tess_sip.ipynb
html/: 01_raw_data.html  01_raw_data.jl.html  01_raw_frames.jl.html  02_reduced.jl.html  02_reduced_data_IMACS.html  02_reduced_data_IMACS.jl.html  03_reduced_LDSS3.jl.html  03_reduced_data_LDSS3.html  03_reduced_data_LDSS3.jl.html  04_detrended_wlcs.html  04_detrended_wlcs.jl.html  05_detrended_blcs.html  05_detrended_blcs.jl.html  05_detrended_bwlcs.jl.html  06_photometric_monitoring.html  06_photometric_monitoring.jl.html  07_transmission_spectra.html  07_transmission_spectra.jl.html  08_retrievals.html  08_retrievals.jl.html  09_pop.html  09_pop.jl.html  cloud_notes.jl.html  comp_stars.html  comp_stars.jl.html  corner_example.jl.html  corner_test.jl.html  detrended_bwlcs.html  detrended_wlcs.html  fruit_land.jl.html  fun_with_errorbars.jl.html  fun_with_python.html  fun_with_python.jl.html  index.html  makie.jl.html  photometric_monitoring.html  photometric_monitoring.jl.html  photometric_monitoring2.html  photometric_monitoring2.jl.html  plot_test.jl.html  (+7 more)
notebooks/python_notebooks/: PlottingBestFit.ipynb  detrended_binned_lcs.ipynb  detrended_wlcs.ipynb  detrended_wlcs_corners.ipynb  extracted_spectra.ipynb  photometric_act.ipynb  photometric_monitoring_3.ipynb  pyproject.toml  raw_frames.ipynb  tess-rotational-variability.ipynb  tess_sip.ipynb  test_mask_coords.py  tspec_full.ipynb  utils.py
(+59 files in other folders)
