[tool.poetry]
name = "WASP-50b"
version = "0.1.0"
description = ""
authors = ["icweaver <iweaver@cfa.harvard.edu>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
jupyter = "^1.0.0"
matplotlib = "^3.4.3"
pandas = "^1.3.4"
astropy = "^4.3.1"
seaborn = "^0.11.2"
corner = "^2.2.1"
numpy = "^1.21.3"
arviz = "^0.11.4"
george = "^0.4.0"
black = "^21.10b0"
lightkurve = "^2.0.11"
astroquery = "^0.4.3"

[tool.poetry.dev-dependencies]
black = { version = "*", allow-prereleases = true }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
